Update account deletion instructions in delete.html

--- a/delete.html
+++ b/delete.html
@@ -9,9 +9,8 @@
     <h2>How to Delete Your Account</h2>
     <ol>
         <li>Open the Lustrum app</li>
-        <li>Go to Profile (tap your profile icon)</li>
-        <li>Tap "Settings"</li>
-        <li>Scroll to bottom and tap "Delete Account"</li>
+        <li>Go to Profile (tap your profile icon in the header right corner)</li>
+        <li>Scroll to bottom and tap "Delete Account" link</li>
         <li>Confirm deletion</li>
     </ol>
     
