Fix email address for account deletion request

--- a/delete.html
+++ b/delete.html
@@ -27,6 +27,6 @@
     <p>All data is deleted immediately upon account deletion. Purchase records are retained for 7 years as required by law for tax purposes only.</p>
     
     <h2>Alternative: Email Request</h2>
-    <p>You can also request account deletion by emailing: <a href="mailto:support@petopoly.com">lustrum.dev@gmail.com</a></p>
+    <p>You can also request account deletion by emailing: <a href="mailto:lustrum.dev@gmail.com">lustrum.dev@gmail.com</a></p>
 </body>
 </html>
